Fix article img spacing

--- a/client/src/styles/Article.css
+++ b/client/src/styles/Article.css
@@ -39,7 +39,7 @@
 
 .article-img {
     width: 100%;
-    height: 200px;
+    height: 80%;
 }
 
 .article-links {
